the last version of index.html

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 			<a href="#">Contacts</a>
 		</nav>
 	</header>
-	<div>
-		<aside>
+	<div class="body-contain">
+		<section>
 			<h1>Experiences</h1>
 			<ul>
 				<li>Web Dev</li>
 				<li>Apps Dev</li>
 				<li>IT Security</li>
 			</ul>
-		</aside>
-		<aside>
+		</section>
+		<section>
 			<h1>Contacts</h1>
 			<ul>
 				<li><a href="#"><i class="fa fa-facebook"></i>	Facebook</a></li>
@@ -33,8 +33,22 @@
 				<li><a href="#"><i class="fa fa-instagram"></i>	Instagram</a></li>
 				<li><a href="#"><i class="fa fa-twitter"></i>	Twitter</a></li>
 			</ul>
-		</aside>
+		</section>
 
+		<footer class="footer">
+			<div>
+				<h2>Mon Addres</h2>
+				<p>Quartier</p>
+				<p>Quartier</p>
+				<p>Quartier</p>
+			</div>
+			<div>
+				<h2>Mes Partenaires</h2>
+				<p>Waltech</p>
+				<p>Amazon</p>
+				<p>Apple</p>
+			</div>
+		</footer>
 	</div>
 </body>
 </html>
